# sequential

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: benchmark.py  keras_util.py
data/: AirPassengers.csv  useia_renewable_energy_production.csv
scripts/: forecast.py  sequential-config-example.json  sequential.ipynb  train.py  transformer-config-example.json  transformer.ipynb  utils.py
src/sequential/: __init__.py
src/sequential/activations/: __init__.py  activations.py
src/sequential/initializers/: initializers.py
src/sequential/layers/: __init__.py  dense.py  dropout.py  dtc.py  layer.py  lstm.py  norm.py  rnn.py
src/sequential/layers/transformer/: __init__.py  attention.py  decoder_layer.py  transformer_dense.py
src/sequential/metrics/: metrics.py
src/sequential/models/: __init__.py  decoder.py  model.py  neural_net.py  transformer.py
src/sequential/optimizers/: __init__.py  adam.py  gd.py
src/sequential/preprocessing/: __init__.py  preprocessing.py  scaler.py
tests/: test_layers.py  test_preprocessing.py
