[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sequential"
version = "0.1.0"
dependencies = [
    "numpy>=2.0.0",
]
description = "Neural network library for sequence modeling"
authors = [
    { name = "Adam Detrick", email = "a.r.detrick@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12.0"
license = "MIT"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.4.0"]
cli = [
  "matplotlib>=3.10.0",
  "pandas>=2.3.0",
]